fixed header navigation and heading text visibility for service page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,46 +107,8 @@ button {
     background-color: #AEE1F7;
 }
 
-// header {
-//     margin-top: 0;
-//     position: relative;
-//     padding: 10px;
-//     float: left;
-//     background: #FFFFFF;
-//     box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.25);
-//     border-radius: 0px 0px 10px 10px;
-//     width: 100vw;
-//     border-bottom-left-radius: 10px;
-//     border-bottom-right-radius: 10px;
-//     overflow: hidden;
-
-//     .headerCentered {
-//         float: none;
-//         position: absolute;
-//         top: 50%;
-//         left: 50%;
-//         transform: translate(-50%, -50%);
-//         font-family: Roboto;
-//         font-style: normal;
-//         font-weight: normal;
-//         line-height: normal;
-//         font-size: 16px;
-//     }
-
-
-//     .login {
-//         font-size: 18px;
-//         float: right;
-//         position: absolute;
-//         top: 50%;
-//         right: 0%;
-//         transform: translate(-50%, -50%);
-//         margin-right: 2.5%;
-//     }
-// }
-
 header {
-    padding: 10px;
+    width: 100%;
     background: #FFFFFF;
     box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.25);
     border-radius: 0px 0px 10px 10px;
@@ -154,43 +116,73 @@ header {
     border-bottom-right-radius: 10px;
     overflow: hidden;
 
-    .logo {
-        margin-left: 2.5%;
-    }
+}
 
-    .navbar-toggler {
-        transform: translate(-35%, -0%);
-        -webkit-transform: translate(-35%, -0%);
-        -moz-transform: translate(-35%, -0%);
-        -ms-transform: translate(-35%, -0%);
-        -o-transform: translate(-35%, -0%);
-    }
 
-    .headerCentered {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: normal;
-        line-height: normal;
-        font-size: 16px;
-        transition: ease-in 250ms;
+.logo {
+    position: absolute;
+    float: left;
+    margin: 16px 0 0 2.5%;
+}
 
-        -webkit-transition: ease-in 250ms;
-        -moz-transition: ease-in 250ms;
-        -ms-transition: ease-in 250ms;
-        -o-transition: ease-in 250ms;
-    }
+nav {
+    position: absolute;
+    z-index: 99;
+    width: 100vw;
+    box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.25);
+    border-radius: 0px 0px 10px 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    overflow: hidden;
+}
 
-    a {
-        text-decoration: none;
-    }
+nav ul {
+    list-style: none;
+    background: rgba(255, 255, 255, 1);
+    overflow: hidden;
+    color: #333333;
+    padding: 0;
+    text-align: center;
+    margin: 0;
+    padding-right: 10px;
+    transition: 1s;
+}
 
-    .login {
-        font-size: 18px;
-        margin-right: 2.5%;
-    }
+.login {
+    float: right;
+    margin-right: 2.5%;
+}
+
+nav.black ul {
+    background: #ffffff;
+}
+
+nav ul li {
+    display: inline-block;
+    padding: 16px 10px;
+    ;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #333333;
+    font-size: 16px;
+}
+
+.menu-icon {
+    line-height: 60px;
+    width: 100%;
+    background: #f3f3f3;
+    text-align: right;
+    box-sizing: border-box;
+    padding: 15px 24px;
+    cursor: pointer;
+    color: #333333;
+    display: none;
 }
 
 .headerImage {
+    top: calc(100vh - 100px);
     background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../img/header_background.png");
     background-size: cover;
     background-repeat: no-repeat;
@@ -708,7 +700,9 @@ body#Услуги {
             align-items: center;
             text-align: center;
             padding: 0;
+
         }
+
 
         h1 {
             margin: 0;
